Import translations. DO NOT MERGE
Change-Id: I84b2f0c629da551293130a0a31024b4bf8172d56
Auto-generated-cl: translation import

--- a/packages/SystemUI/res/values-rm/strings.xml
+++ b/packages/SystemUI/res/values-rm/strings.xml
@@ -270,6 +270,8 @@
     <skip />
     <!-- no translation found for start_dreams (870400522982252717) -->
     <skip />
+    <!-- no translation found for ethernet_label (7967563676324087464) -->
+    <skip />
     <!-- no translation found for quick_settings_airplane_mode_label (5510520633448831350) -->
     <skip />
     <!-- no translation found for quick_settings_battery_charging_label (490074774465309209) -->
